fix hamburger bottom bun margin spacing

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -112,6 +112,6 @@
 
 .hamTwo {
   transform-origin: 0 -15%;
-  margin-top: 30px;
+  margin-top: 31px;
   // transition-delay: 1s;
 }
